# market-tracker

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.staging.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  apify-config.yaml  app-config.yaml  pyproject.toml
backend/app/: airflow_config.py  airflow_runtime.py  container.py  main.py  seed.py  store.py  store_impl.py  test_apify.py  test_competitor_product_url.py
backend/app/config/: config.py
backend/app/core/: errors.py  logging.py  metrics.py  utils.py
backend/app/integrations/: __init__.py  adapter_registry.py  adapters.py  apify_gateway.py
backend/app/models/: __init__.py  api.py  contracts.py  documents.py
backend/app/scripts/: update_category_images.py  update_product_images.py
backend/app/services/: __init__.py  apify_run_lifecycle_service.py  dashboard_query_service.py  diff_service.py  digest_service.py  event_engine.py  insights_query_service.py  job_service.py  llm_service.py  (+10 more)
backend/dags/: market_tracker_apify_poller.py  market_tracker_importer.py  market_tracker_notifications.py  market_tracker_schedule_reconcile.py  market_tracker_weekly_digest.py
backend/docs/: AIRFLOW.md  BE_ARCHITECTURE.md  BE_ARCHITECTURE_TODO.md  DB_SCHEMA.md  EVENT_LOGIC.md  Market Tracker.md  apify_actors.md  plan-apify-pools-redesign.md
backend/outputs/: intelscrape.json  piotrv_deals.json  radeance.json  saswave.json  test_apify.py
backend/tests/: LOGIC_TEST_CASES.md  conftest.py  test_competitor_logic.py  test_llm_service.py  test_notification_service.py
(+130 files in other folders)
